Avoid misclick when cropping an image and clicking out of the box

--- a/Resources/public/css/modal-image.css
+++ b/Resources/public/css/modal-image.css
@@ -4,8 +4,7 @@
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
-	opacity: 0.95;
+	background-color: rgba(0, 0, 0, 0.9);
 	z-index: 100000;
 }
 
